--- a/blocks/place/__image-item/place__image-item.css
+++ b/blocks/place/__image-item/place__image-item.css
@@ -24,7 +24,7 @@
 @media screen and (max-width: 640px) {
     .place__image-item {
         min-width: 330px;
-        min-height: 320px;
+        min-height: 330px;
     }
 }
 
