--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -29,11 +29,14 @@
 
 @media screen and (max-width: 640px) {
     .place {
-        grid-template-columns: auto;
-        grid-template-rows: auto auto auto auto;
-        grid-template-areas:
-            "title" "image" "summary" "website";
-        grid-gap: 32px;
+        /*grid-template-columns: auto;*/
+        /*grid-template-rows: auto auto auto auto;*/
+        /*grid-template-areas:*/
+        /*    "title" "image" "summary" "website";*/
+        /*grid-gap: 32px;*/
+        /*margin-bottom: 48px;*/
+        display: flex;
+        flex-direction: column;
         margin-bottom: 48px;
     }
 }
